package ru.yourname.timeserverfx.decorator;

import javafx.scene.Node;

public interface ClockDecorator {
    void draw(Node node);
}
