package ru.yourname.timeserverfx.observer;

public interface IObserver {
    void update(Subject subject);
}
