```plantuml
@startuml
skinparam monochrome true

interface Subject {
    +attach(observer: IObserver)
    +detach(observer: IObserver)
    +notifyAllObservers()
    +getState(): int
}

interface IObserver {
    +update(subject: Subject)
}

class TimeServer implements Subject {
    -timeState: int
    -timer: Timer
    -observers: List<IObserver>
    +startServer()
    +stopServer()
    +resetState()
}

class TextClock extends Label implements IObserver
class DigitalClock extends Label implements IObserver
class AnalogClock extends Pane implements IObserver

interface ClockDecorator {
    +draw(node: Node)
}

abstract class BaseDecorator implements ClockDecorator {
    #decorator: ClockDecorator
}

class ShadowDecorator extends BaseDecorator
class GlowDecorator extends BaseDecorator

Subject <|-- TimeServer
IObserver <|-- TextClock
IObserver <|-- DigitalClock
IObserver <|-- AnalogClock

ClockDecorator <|-- BaseDecorator
BaseDecorator <|-- ShadowDecorator
BaseDecorator <|-- GlowDecorator

TimeServer o--> "many" IObserver : notifies
AnalogClock --> ClockDecorator : decorated by
@enduml